# FlowVisualizerEnhancedDPI

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  PR_DESCRIPTION.md  README.md  SIP_PARSING_FIXES.md  config.example.json  config.json  docker-compose.yml  find_unused.py  nginx-locations.conf  nginx.conf  repro_overflow  repro_test  schema.sql  test_correlation
build_debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
config/: protocols.yaml
db/: callflowd.db  callflowd.db-shm  (+1 more)
docs/: API.md  (+30 more)
src/: CMakeLists.txt
src/api_server/: analytics_manager.cpp  analytics_routes.cpp  analytics_service.cpp  auth_manager.cpp  auth_middleware.cpp  auth_routes.cpp  diagram_formatter.cpp  http_server.cpp  input_validator.cpp  job_manager.cpp  rate_limiter.cpp  routes.cpp  websocket_handler.cpp
src/cli/: cli_parser.cpp  create_admin.cpp  main.cpp
src/common/: config_loader.cpp  crypto_utils.cpp  logger.cpp  nas_security_context.cpp  packet_filter.cpp  types.cpp  utils.cpp
src/config/: config_manager.cpp
src/correlation/: fiveg_registration_machine.cpp  handover_detector.cpp  keepalive_aggregator.cpp  ladder_diagram_generator.cpp  ladder_types.cpp  lte_attach_machine.cpp  participant_detector.cpp  procedure_detector.cpp  procedure_state_machine.cpp  sip_dialog_tracker.cpp  sip_session_manager.cpp  subscriber_context.cpp  tunnel_manager.cpp  volte_call.cpp  volte_call_machine.cpp  volte_subscriber_context.cpp  x2_handover_machine.cpp
src/correlation/diameter/: diameter_correlator.cpp  diameter_message.cpp  diameter_session.cpp  diameter_types.cpp
src/correlation/gtpv2/: gtpv2_bearer.cpp  gtpv2_correlator.cpp  gtpv2_fteid_manager.cpp  gtpv2_message.cpp  gtpv2_session.cpp  gtpv2_types.cpp
src/correlation/identity/: guti_parser.cpp  identity_matcher.cpp  imei_normalizer.cpp  imsi_normalizer.cpp  msisdn_normalizer.cpp  subscriber_context_manager.cpp  subscriber_identity.cpp
src/correlation/nas/: nas_correlator.cpp  nas_ie_parser.cpp  nas_message.cpp  nas_session.cpp  nas_types.cpp
src/correlation/rtp/: rtp_correlator.cpp  rtp_stream.cpp
src/correlation/s1ap/: s1ap_context.cpp  s1ap_correlator.cpp  s1ap_message.cpp  s1ap_types.cpp
src/correlation/sip/: sip_call_detector.cpp  sip_correlator.cpp  sip_dialog.cpp  sip_message.cpp  sip_session.cpp  sip_transaction.cpp  sip_types.cpp
src/correlation/volte/: volte_correlator.cpp  volte_json.cpp
src/event_extractor/: event_builder.cpp  json_exporter.cpp
src/flow_manager/: flow_tracker.cpp  session_correlator.cpp  session_correlator_logic.cpp
src/ndpi_engine/: flow_classifier.cpp  ndpi_flow_cache.cpp  ndpi_wrapper.cpp  protocol_detector.cpp
src/pcap_ingest/: diameter_framer.cpp  format_detector.cpp  http2_framer.cpp  interface_detector.cpp  ip_reassembler.cpp  link_layer_parser.cpp  multi_interface_reader.cpp  packet_processor.cpp  packet_queue.cpp  pcap_reader.cpp  pcapng_reader.cpp  sip_framer.cpp  tcp_reassembler.cpp  tcp_reassembly.cpp  tcp_state_machine.cpp
src/persistence/: database.cpp
src/protocol_parsers/: diameter_parser.cpp  diameter_s6a_parser.cpp  fiveg_sba_parser.cpp  gtp_parser.cpp  gtpv1_parser.cpp  http2_parser.cpp  nas5g_parser.cpp  nas_parser.cpp  ngap_parser.cpp  pfcp_parser.cpp  rtp_parser.cpp  s1ap_parser.cpp  sip_3gpp_parser.cpp  sip_parser.cpp  x2ap_parser.cpp
src/protocol_parsers/diameter/: diameter_avp_parser.cpp  diameter_base.cpp  diameter_cx_parser.cpp  diameter_gx_parser.cpp  diameter_gy_parser.cpp  diameter_policy_types.cpp  diameter_rx_parser.cpp  diameter_session_manager.cpp  diameter_sh_parser.cpp  diameter_types.cpp  ims_types.cpp  policy_rule_parser.cpp
src/protocol_parsers/gtp/: gtp_teid_manager.cpp  gtpv2_ie_parser.cpp  gtpv2_types.cpp
src/protocol_parsers/s1ap/: s1ap_ie_parser.cpp  s1ap_parser.cpp
src/session/: session_correlator.cpp  session_types.cpp
src/transport/: sctp_parser.cpp  sctp_reassembler.cpp
tests/: CMakeLists.txt  repro_json.cpp  repro_merging  repro_merging.cpp  repro_overflow.cpp  repro_pcap_reader.cpp  repro_timestamp.cpp  test_community_correlation.cpp  test_field_registry.cpp  test_parser_fields.cpp  test_sip_correlation.cpp
tests/integration/: test_lte_attach_correlation.cpp  test_multi_interface_pcapng.cpp  test_volte_correlation.cpp  test_volte_full_call.cpp  test_volte_integration.cpp
tests/pcap/: README_X2AP_NGAP_TESTING.md
tests/unit/: test_context_lookup.cpp  test_context_merge.cpp  test_diameter_base.cpp  test_diameter_cx.cpp  test_diameter_gx.cpp  test_diameter_gy.cpp  test_diameter_rx.cpp  test_diameter_s6a.cpp  test_diameter_sh.cpp  test_dynamic_port_tracker.cpp  test_gtp_teid_manager.cpp  test_gtpv1_parser.cpp  test_gtpv2_bearer_context.cpp  test_gtpv2_ie_parser.cpp  test_gy_mscc.cpp  test_gy_service_units.cpp  test_handover_detection.cpp  test_interface_detection.cpp  test_keepalive_aggregation.cpp  test_ladder_generator.cpp  test_lte_attach_machine.cpp  test_nas_correlator.cpp  test_nas_parser.cpp  test_participant_detection.cpp  test_pcapng_reader.cpp  test_pfcp_parser.cpp  test_protocol_detector.cpp  test_s1ap_correlator.cpp  test_s1ap_parser.cpp  test_s6a_subscription_parsing.cpp  test_sctp_parser.cpp  test_sip_3gpp_headers.cpp  test_sip_methods.cpp  test_sip_standalone.cpp  test_sip_volte_vonr.cpp  test_subscriber_context.cpp  test_tcp_ooo.cpp  test_tcp_reassembly.cpp  test_tcp_retransmission.cpp  test_tunnel_lifecycle.cpp  (+2 more)
tests/unit/diameter/: test_diameter_correlator.cpp
tests/unit/gtpv2/: test_gtpv2_bearer.cpp  test_gtpv2_correlator.cpp  test_gtpv2_fteid_manager.cpp  test_gtpv2_session.cpp
tests/unit/identity/: test_guti_parser.cpp  test_identity_matcher.cpp  test_imei_normalizer.cpp  test_imsi_normalizer.cpp  test_msisdn_normalizer.cpp  test_subscriber_context_manager.cpp
tests/unit/protocol_parsers/: test_s1ap_parser.cpp
tests/unit/rtp/: test_rtp_correlator.cpp  test_rtp_stream.cpp
tests/unit/sip/: test_sip_call_detector.cpp  test_sip_correlator.cpp  test_sip_dialog.cpp  test_sip_transaction.cpp
tests/unit/volte/: test_volte_correlator.cpp
(+393 files in other folders)
